change homepage styling.

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 @{
   Layout = "_Layout";
 }
-<div class="home">
-  <img src="../img/hair-salon.jpg" alt="hair salon">
+<div class="col-md-8 offset-md-2">
+  <div class="home">
+    <img src="../img/hair-salon.jpg" alt="hair salon">
+  </div>
+  <p class="text-center">
+    <a href="/Stylists"><button type="button" class="btn btn-dark">Add Stylist</button></a>
+  </p>
+  
 </div>
