finalize styling to stylist views and change link color.

--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -10,11 +10,15 @@
       <h4>Add A New Stylist</h4>
     </div>
     <div class="text-center card-body">
+    @using (Html.BeginForm())
+    {
       <div class="form-group">
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name, new { @class="form-control"})
       </div>
-      <input type="submit" value="Add" class="btn btn-light">
+        <input type="submit" value="Add" class="btn btn-light">
+
+    }
     </div>
     <p class="text-center">
       @Html.ActionLink("Show All", "Index", null, htmlAttributes: new { @class = "btn btn-light btn-md" })
