--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -9,3 +9,12 @@ img {
   display: flex;
   justify-content: center;
 }
+
+hr { 
+  background-color: white; height: 1px; border: 0; }
+
+.link
+{
+  color: white;
+}
+
