fix bugs for delete function.

--- a/HairSalon/Views/Stylists/Delete.cshtml
+++ b/HairSalon/Views/Stylists/Delete.cshtml
@@ -19,6 +19,6 @@
         <input type="submit" value="Delete"/>
       }
     </p>
-    @Html.ActionLink("View All Stylists", "Details", "Stylists", null, htmlAttributes: new { @class = "btn btn-light btn-sm" })
+    @Html.ActionLink("View All Stylists", "Index", "Stylists", htmlAttributes: new { @class = "btn btn-light btn-sm" })
   </div>
 </div>
