--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -16,12 +16,9 @@
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name, new { @class="form-control"})
       </div>
-        <input type="submit" value="Add" class="btn btn-light">
-
+      <input type="submit" value="Add" class="btn btn-light">
+      @Html.ActionLink("Back", "Index", null, htmlAttributes: new { @class = "btn btn-light btn-md" })
     }
     </div>
-    <p class="text-center">
-      @Html.ActionLink("Show All", "Index", null, htmlAttributes: new { @class = "btn btn-light btn-md" })
-    </p>
   </div>
 </div>
