--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -16,6 +16,10 @@
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name, new { @class="form-control"})
       </div>
+      <div class="form-group">
+        @Html.LabelFor(model => model.Specialty)
+        @Html.TextBoxFor(model => model.Specialty, new { @class="form-control"})
+      </div>
       <input type="submit" value="Add" class="btn btn-light">
       @Html.ActionLink("Back", "Index", null, htmlAttributes: new { @class = "btn btn-light btn-md" })
     }
