--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -17,7 +17,8 @@
       <hr>
     </div>
     <p class="text-center">
-      @Html.ActionLink("Back to Client List", "Details", "Stylists", new {id = Model.StylistId}, htmlAttributes: new { @class = "btn btn-light btn-md" })
+      @Html.ActionLink("Back", "Details", "Stylists", new {id = Model.StylistId}, htmlAttributes: new { @class = "btn btn-light btn-md" })
+      @Html.ActionLink("Edit", "Edit", new { id = Model.ClientId }, htmlAttributes: new { @class = "btn btn-light btn-md" })
       @Html.ActionLink("Delete Client", "Delete", new { id = Model.ClientId }, htmlAttributes: new { @class = "btn btn-light btn-md" })
     </p>
   </div>
