--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -17,7 +17,7 @@
       }
       @foreach (Client client in @Model.Clients)
       {
-       <p><a href="/Clients/Details/@client.ClientId">@client.Name</a></p>
+       <p><a class="link" href="/Clients/Details/@client.ClientId">@client.Name</a></p>
       }
     </div>
     <hr>
