--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -9,20 +9,20 @@
     <div class="text-center card-header">
       <h4>Edit Client: @Html.DisplayFor(model => model.Name)</h4>
     </div>
-    <div class="text-center card-body">
+    <div class="card-body">
     @using (Html.BeginForm())
     {
       @Html.HiddenFor(model => model.ClientId)
       <div class="form-group">
-        @Html.LabelFor(model => model.Name)
+        @Html.LabelFor(model => model.Name):
         @Html.EditorFor(model => model.Name, new { @class="form-control"})
       </div>
       <div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumber)
+        @Html.LabelFor(model => model.PhoneNumber):
         @Html.EditorFor(model => model.PhoneNumber, new { @class="form-control"})
       </div>
       <div class="form-group">
-        @Html.LabelFor(model => model.HairStyle)
+        @Html.LabelFor(model => model.HairStyle):
         @Html.EditorFor(model => model.HairStyle, new { @class="form-control"})
       </div>
       <input type="submit" value="Edit" class="btn btn-light">
