update navbar content and spash page button.

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <img src="../img/hair-salon.jpg" alt="hair salon">
   </div>
   <p class="text-center">
-    <a href="/Stylists"><button type="button" class="btn btn-dark">Add Stylist</button></a>
+    <a href="/Stylists"><button type="button" class="btn btn-dark"> View Stylists</button></a>
   </p>
   
 </div>
